refactor: improve validation error response structure